sonar代码优化